mux-compiler/tests/snapshots/parser_integration__legacy_ast_logger.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Function(
        FunctionNode {
            name: "write_log",
            type_params: [],
            params: [
                Param {
                    name: "message",
                    type_: TypeNode {
                        kind: Primitive(
                            Str,
                        ),
                        span: Span,
                    },
                    default_value: None,
                },
            ],
            return_type: TypeNode {
                kind: Primitive(
                    Void,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "print",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Binary {
                                            left: ExpressionNode {
                                                kind: Literal(
                                                    String(
                                                        "LOG: ",
                                                    ),
                                                ),
                                                span: Span,
                                            },
                                            op: Add,
                                            op_span: Span,
                                            right: ExpressionNode {
                                                kind: Identifier(
                                                    "message",
                                                ),
                                                span: Span,
                                            },
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        None,
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
    Function(
        FunctionNode {
            name: "write_error",
            type_params: [],
            params: [
                Param {
                    name: "message",
                    type_: TypeNode {
                        kind: Primitive(
                            Str,
                        ),
                        span: Span,
                    },
                    default_value: None,
                },
            ],
            return_type: TypeNode {
                kind: Primitive(
                    Void,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "print",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Binary {
                                            left: ExpressionNode {
                                                kind: Literal(
                                                    String(
                                                        "ERROR: ",
                                                    ),
                                                ),
                                                span: Span,
                                            },
                                            op: Add,
                                            op_span: Span,
                                            right: ExpressionNode {
                                                kind: Identifier(
                                                    "message",
                                                ),
                                                span: Span,
                                            },
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        None,
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
    Function(
        FunctionNode {
            name: "write_warn",
            type_params: [],
            params: [
                Param {
                    name: "message",
                    type_: TypeNode {
                        kind: Primitive(
                            Str,
                        ),
                        span: Span,
                    },
                    default_value: None,
                },
            ],
            return_type: TypeNode {
                kind: Primitive(
                    Void,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "print",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Binary {
                                            left: ExpressionNode {
                                                kind: Literal(
                                                    String(
                                                        "WARN: ",
                                                    ),
                                                ),
                                                span: Span,
                                            },
                                            op: Add,
                                            op_span: Span,
                                            right: ExpressionNode {
                                                kind: Identifier(
                                                    "message",
                                                ),
                                                span: Span,
                                            },
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        None,
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
    Function(
        FunctionNode {
            name: "write_debug",
            type_params: [],
            params: [
                Param {
                    name: "message",
                    type_: TypeNode {
                        kind: Primitive(
                            Str,
                        ),
                        span: Span,
                    },
                    default_value: None,
                },
            ],
            return_type: TypeNode {
                kind: Primitive(
                    Void,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Expression(
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "print",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Binary {
                                            left: ExpressionNode {
                                                kind: Literal(
                                                    String(
                                                        "DEBUG: ",
                                                    ),
                                                ),
                                                span: Span,
                                            },
                                            op: Add,
                                            op_span: Span,
                                            right: ExpressionNode {
                                                kind: Identifier(
                                                    "message",
                                                ),
                                                span: Span,
                                            },
                                        },
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        None,
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
]
