mux-compiler/tests/snapshots/parser_integration__legacy_ast_match_expression_assignment.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Function(
        FunctionNode {
            name: "load_value",
            type_params: [],
            params: [],
            return_type: TypeNode {
                kind: Named(
                    "result",
                    [
                        TypeNode {
                            kind: Primitive(
                                Int,
                            ),
                            span: Span,
                        },
                        TypeNode {
                            kind: Primitive(
                                Str,
                            ),
                            span: Span,
                        },
                    ],
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: TypedDecl(
                        "loaded",
                        TypeNode {
                            kind: Named(
                                "result",
                                [
                                    TypeNode {
                                        kind: Primitive(
                                            Int,
                                        ),
                                        span: Span,
                                    },
                                    TypeNode {
                                        kind: Primitive(
                                            Str,
                                        ),
                                        span: Span,
                                    },
                                ],
                            ),
                            span: Span,
                        },
                        ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "ok",
                                    ),
                                    span: Span,
                                },
                                args: [
                                    ExpressionNode {
                                        kind: Literal(
                                            Integer(
                                                41,
                                            ),
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: AutoDecl(
                        "value",
                        TypeNode {
                            kind: Auto,
                            span: Span,
                        },
                        ExpressionNode {
                            kind: Match {
                                expr: ExpressionNode {
                                    kind: Identifier(
                                        "loaded",
                                    ),
                                    span: Span,
                                },
                                arms: [
                                    MatchArm {
                                        pattern: EnumVariant {
                                            name: "ok",
                                            args: [
                                                Identifier(
                                                    "number",
                                                ),
                                            ],
                                        },
                                        guard: None,
                                        body: [
                                            StatementNode {
                                                kind: Expression(
                                                    ExpressionNode {
                                                        kind: Binary {
                                                            left: ExpressionNode {
                                                                kind: Identifier(
                                                                    "number",
                                                                ),
                                                                span: Span,
                                                            },
                                                            op: Add,
                                                            op_span: Span,
                                                            right: ExpressionNode {
                                                                kind: Literal(
                                                                    Integer(
                                                                        1,
                                                                    ),
                                                                ),
                                                                span: Span,
                                                            },
                                                        },
                                                        span: Span,
                                                    },
                                                ),
                                                span: Span,
                                            },
                                        ],
                                    },
                                    MatchArm {
                                        pattern: EnumVariant {
                                            name: "err",
                                            args: [
                                                Identifier(
                                                    "error",
                                                ),
                                            ],
                                        },
                                        guard: None,
                                        body: [
                                            StatementNode {
                                                kind: Return(
                                                    Some(
                                                        ExpressionNode {
                                                            kind: Call {
                                                                func: ExpressionNode {
                                                                    kind: Identifier(
                                                                        "err",
                                                                    ),
                                                                    span: Span,
                                                                },
                                                                args: [
                                                                    ExpressionNode {
                                                                        kind: Identifier(
                                                                            "error",
                                                                        ),
                                                                        span: Span,
                                                                    },
                                                                ],
                                                            },
                                                            span: Span,
                                                        },
                                                    ),
                                                ),
                                                span: Span,
                                            },
                                        ],
                                    },
                                ],
                            },
                            span: Span,
                        },
                    ),
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        Some(
                            ExpressionNode {
                                kind: Call {
                                    func: ExpressionNode {
                                        kind: Identifier(
                                            "ok",
                                        ),
                                        span: Span,
                                    },
                                    args: [
                                        ExpressionNode {
                                            kind: Identifier(
                                                "value",
                                            ),
                                            span: Span,
                                        },
                                    ],
                                },
                                span: Span,
                            },
                        ),
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
    Function(
        FunctionNode {
            name: "main",
            type_params: [],
            params: [],
            return_type: TypeNode {
                kind: Primitive(
                    Void,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Match {
                        expr: ExpressionNode {
                            kind: Call {
                                func: ExpressionNode {
                                    kind: Identifier(
                                        "load_value",
                                    ),
                                    span: Span,
                                },
                                args: [],
                            },
                            span: Span,
                        },
                        arms: [
                            MatchArm {
                                pattern: EnumVariant {
                                    name: "ok",
                                    args: [
                                        Identifier(
                                            "value",
                                        ),
                                    ],
                                },
                                guard: None,
                                body: [
                                    StatementNode {
                                        kind: Expression(
                                            ExpressionNode {
                                                kind: Call {
                                                    func: ExpressionNode {
                                                        kind: Identifier(
                                                            "print",
                                                        ),
                                                        span: Span,
                                                    },
                                                    args: [
                                                        ExpressionNode {
                                                            kind: Call {
                                                                func: ExpressionNode {
                                                                    kind: FieldAccess {
                                                                        expr: ExpressionNode {
                                                                            kind: Identifier(
                                                                                "value",
                                                                            ),
                                                                            span: Span,
                                                                        },
                                                                        field: "to_string",
                                                                    },
                                                                    span: Span,
                                                                },
                                                                args: [],
                                                            },
                                                            span: Span,
                                                        },
                                                    ],
                                                },
                                                span: Span,
                                            },
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                            MatchArm {
                                pattern: EnumVariant {
                                    name: "err",
                                    args: [
                                        Identifier(
                                            "error",
                                        ),
                                    ],
                                },
                                guard: None,
                                body: [
                                    StatementNode {
                                        kind: Expression(
                                            ExpressionNode {
                                                kind: Call {
                                                    func: ExpressionNode {
                                                        kind: Identifier(
                                                            "print",
                                                        ),
                                                        span: Span,
                                                    },
                                                    args: [
                                                        ExpressionNode {
                                                            kind: Identifier(
                                                                "error",
                                                            ),
                                                            span: Span,
                                                        },
                                                    ],
                                                },
                                                span: Span,
                                            },
                                        ),
                                        span: Span,
                                    },
                                ],
                            },
                        ],
                    },
                    span: Span,
                },
                StatementNode {
                    kind: Return(
                        None,
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
]
