mux-compiler/tests/snapshots/parser_integration__legacy_ast_modglobal_b.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Statement(
        StatementNode {
            kind: ConstDecl(
                "SHARED",
                TypeNode {
                    kind: Primitive(
                        Int,
                    ),
                    span: Span,
                },
                ExpressionNode {
                    kind: Literal(
                        Integer(
                            222,
                        ),
                    ),
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: ConstDecl(
                "LABEL",
                TypeNode {
                    kind: Primitive(
                        Str,
                    ),
                    span: Span,
                },
                ExpressionNode {
                    kind: Literal(
                        String(
                            "beta",
                        ),
                    ),
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Function(
        FunctionNode {
            name: "b_shared",
            type_params: [],
            params: [],
            return_type: TypeNode {
                kind: Primitive(
                    Int,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Return(
                        Some(
                            ExpressionNode {
                                kind: Identifier(
                                    "SHARED",
                                ),
                                span: Span,
                            },
                        ),
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
    Function(
        FunctionNode {
            name: "b_label",
            type_params: [],
            params: [],
            return_type: TypeNode {
                kind: Primitive(
                    Str,
                ),
                span: Span,
            },
            body: [
                StatementNode {
                    kind: Return(
                        Some(
                            ExpressionNode {
                                kind: Identifier(
                                    "LABEL",
                                ),
                                span: Span,
                            },
                        ),
                    ),
                    span: Span,
                },
            ],
            span: Span,
            is_common: false,
            where_clause: None,
        },
    ),
]
