mux-compiler/tests/snapshots/parser_integration__legacy_ast_modglobal_c.snap
---
source: mux-compiler/tests/parser_integration.rs
---
[
    Statement(
        StatementNode {
            kind: ConstDecl(
                "err_threshold",
                TypeNode {
                    kind: Primitive(
                        Int,
                    ),
                    span: Span,
                },
                ExpressionNode {
                    kind: Literal(
                        Integer(
                            7,
                        ),
                    ),
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: ConstDecl(
                "print_width",
                TypeNode {
                    kind: Primitive(
                        Int,
                    ),
                    span: Span,
                },
                ExpressionNode {
                    kind: Literal(
                        Integer(
                            80,
                        ),
                    ),
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: ConstDecl(
                "some_label",
                TypeNode {
                    kind: Primitive(
                        Str,
                    ),
                    span: Span,
                },
                ExpressionNode {
                    kind: Literal(
                        String(
                            "wildcard",
                        ),
                    ),
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
    Statement(
        StatementNode {
            kind: ConstDecl(
                "LIMIT",
                TypeNode {
                    kind: Primitive(
                        Int,
                    ),
                    span: Span,
                },
                ExpressionNode {
                    kind: Literal(
                        Integer(
                            55,
                        ),
                    ),
                    span: Span,
                },
            ),
            span: Span,
        },
    ),
]
